# prompt-flags

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  initial-spec.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  engineer.md  operator.md  reviewer.md
.claude/skills/: cleanup.md  design.md  eval.md  plan.md  prompt-flags.md  quality.md  review.md  role.md  scaffold.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/architecture/: ARCHITECTURE.md  dependency-layers.md  domain-map.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md
docs/references/: dependency-analysis.md
examples/agent_with_flags/: README.md  agent.py  agent_config.yaml
src/prompt_flags/: __init__.py
tests/: conftest.py
tests/fixtures/: invalid_config.yaml  multi_bucket_config.yaml  sample_config.yaml
tests/integration/: test_builder_pipeline.py  test_decorator_pipeline.py  test_full_pipeline.py
tests/structural/: test_imports.py
tests/unit/: test_analyzers.py  test_api_builder.py  test_api_decorators.py  test_api_functional.py  test_config_loader.py  test_config_schema.py  test_core_dependency_graph.py  test_core_models.py  test_core_ordering.py  test_core_registry.py  test_core_resolver.py  test_plugins_manager.py  test_plugins_protocols.py  test_rendering_engine.py  test_rendering_extensions.py  test_rendering_filters.py
tools/: __init__.py
tools/analyzers/: __init__.py  flag_impact.py  (+4 more)
(+31 files in other folders)
